# pseudo-microbit

./: .gitignore  404.html  LICENSE  README.md  index.html  log.py  machine.py  microbit.py  micropython.py  mkdocs.yml  music.py  neopixel.py  os.py  power.py  pypi_desc.md  pyproject.toml  radio.py  random.py  search.html  setup.py  sitemap.xml  speech.py  t.py  utime.py
add_directory/: index.html
add_file/: index.html
archive/: random.py
contact/: index.html
create_project/: index.html
docs/: add_directory.md  add_file.md  contact.md  create_project.md  external.md  file_min.md  index.md  mfs.md  minimizer.md  minimizer_install.md  pm_install.md  pycharm_install.md  uflash.md  upload.md  using_mfs.md
file_min/: index.html
install/: index.html
mfs/: index.html
microbit/: SoundEvent.py  __init__.py  _base_functions.py  _button.py  _image.py  _pin.py  audio.py  display.py  i2c.py  microphone.py  speaker.py  spi.py  uart.py
minimizer/: index.html
minimizer_install/: index.html
pm_install/: index.html
pseudo-microbit/microbit/: __init__.py  display.py  i2c.py  uart.py
pycharm_install/: index.html
search/: search_index.json
tests/: imports.py
uflash/: index.html
upload/: index.html
using_mfs/: index.html
